# photonstrust

./: .coverage  .dockerignore  .dvcignore  .gitattributes  .gitignore  .pre-commit-config.yaml  =42.0  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  app.py  dvc.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
benchmarks/: benchmark_jax_scattering.py  benchmark_rust_events.py
configs/: README.md  demo11_orbit_pass_envelope.yml  demo1_c_1550.yml  demo1_default.yml  demo1_matrix_full.yml  demo1_matrix_high_end.yml  demo1_matrix_low_cost.yml  demo1_matrix_realistic.yml  demo1_nir_795.yml  demo1_nir_850.yml  demo1_o_1310.yml  demo2_repeater_spacing.yml  demo3_heralding_comparison.yml  demo3_teleportation.yml  demo4_source_benchmark.yml  demo5_satellite_downlink.yml  demo6_transient_emitter.yml  demo7_multifidelity_certification.yml  demo7_multifidelity_preview.yml
datasets/: README.md  schema.json
docs/: README.md  phase_b_research_report.md  repo_capabilities_2026-02-18.md
examples/: README.md  Satellite_to_Chip_Digital_Twin.ipynb  demo1_run.py
graphs/: demo8_pic_circuit_graph.json  demo8_qkd_link_graph.json  demo8_qkd_link_graph.ptg.toml  demo_qkd_transmitter.json
notebooks/: quickstart.ipynb
open_source/: README.md
photonstrust/: __init__.py  ai_surrogate.py  api_server.py  cli.py  cli_helpers.py  comparison.py  config.py  easy.py  errors.py  gallery.py  plots.py  presets.py  product_demo.py  qkd.py  qkd_types.py  repeater.py  report.py  sdk.py  sweep.py  utils.py  validation.py  visualize.py
photonstrust.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
photonstrust_rs/: Cargo.toml  README.md  build_check.txt  build_error.txt  error_log.txt  pyproject.toml
photonstrust_rs/src/: lib.rs
reports/: phase_c_research_report.md
requirements/: runtime.lock.txt
results/: README.md  run_registry.json  tmp_open_benchmark_refresh.json
schemas/: photonstrust.artifact_pack_manifest.v0.schema.json  photonstrust.benchmark_bundle.v0.schema.json  photonstrust.component_catalog_entry.v0.schema.json  photonstrust.config.demo1.schema.json  photonstrust.day10_tapeout_rehearsal_packet.v0.schema.json  photonstrust.etsi_qkd_compliance_report.v0.schema.json  photonstrust.event_trace.v0.schema.json  photonstrust.evidence_bundle_manifest.v0.schema.json  photonstrust.evidence_bundle_publish_manifest.v0.schema.json  photonstrust.evidence_bundle_signature.v0.schema.json  photonstrust.external_sim_result.v0.schema.json  photonstrust.graph.v0_1.schema.json  photonstrust.layout_parallel_runs.v0_1.schema.json  photonstrust.m3_checkpoint_report.v0.schema.json  photonstrust.measurement_bundle.v0.schema.json  photonstrust.multifidelity_report.v0.schema.json  photonstrust.orbit_pass_envelope.v0_1.schema.json  photonstrust.orbit_pass_results.v0.schema.json  photonstrust.pdk_adapter_contract.v0.schema.json  photonstrust.pdk_manifest.v0.schema.json  photonstrust.performance_drc.v0.schema.json  photonstrust.pic_chip_assembly.v0.schema.json  photonstrust.pic_corner_sweep.v0.schema.json  photonstrust.pic_crosstalk_sweep.v0.schema.json  photonstrust.pic_foundry_approval_sealed_summary.v0.schema.json  photonstrust.pic_foundry_drc_sealed_summary.v0.schema.json  photonstrust.pic_foundry_lvs_sealed_summary.v0.schema.json  photonstrust.pic_foundry_pex_sealed_summary.v0.schema.json  photonstrust.pic_invdesign_report.v0.schema.json  photonstrust.pic_klayout_drc_lite.v0.schema.json  photonstrust.pic_klayout_run_artifact_pack.v0.schema.json  photonstrust.pic_layout_build.v0.schema.json  photonstrust.pic_lvs_lite.v0.schema.json  photonstrust.pic_ports.v0.schema.json  photonstrust.pic_qkd_certificate.v0.schema.json  photonstrust.pic_routes.v0.schema.json  photonstrust.pic_signoff_ladder.v0.schema.json  photonstrust.pic_spice_export.v0.schema.json  photonstrust.pic_tapeout_gate.v0.schema.json  photonstrust.pic_waivers.v0.schema.json  (+10 more)
scripts/: README.md  apply_branch_protection.py  build_pic_c_d5_packet.py  build_pic_external_data_manifest.py  build_pic_gate_b_packet.py  build_pic_gate_e_packet.py  build_pic_integration_task_board.py  build_pic_preflight_policy_packet.py  build_pic_readiness_scorecard.py  build_release_gate_packet.py  build_tapeout_package.py  bundle_release.py  check_benchmark_drift.py  check_external_reviewer_findings.py  check_hardcoded_physics_constants.py  check_maintainability_budgets.py  check_milestone_archive.py  check_model_metadata_contract.py  check_open_benchmarks.py  check_pic_crosstalk_calibration_drift.py  check_pic_tapeout_gate.py  check_pilot_packet.py  check_runtime_environment.py  ci_checks.py  clean_local_workspace.py  compare_recent_research_benchmarks.py  compute_ci_health_metrics.py  drc_wizard.py  generate_baselines.py  generate_compliance_reference_baselines.py  generate_golden_report.py  generate_m3_checkpoint_reference.py  generate_phase41_canonical_baselines.py  generate_phase54_satellite_canonical_baselines.py  generate_repro_pack.py  generate_satellite_chain_reference.py  ingest_measurement_bundle.py  init_pic_claim_evidence_matrix.py  init_pic_gate_b_measurement_templates.py  init_pic_gate_e_metrics_templates.py  (+39 more)
tests/: README.md  benchmark_jax_scattering.py  benchmark_rust_events.py  test_adaptive_optics.py  test_analytics.py  test_api_auth_rbac.py  test_api_contract_v1.py  test_api_phase57_pdk_manifest_and_foundry.py  test_api_server_optional.py  test_apply_branch_protection_script.py  test_audit.py  test_backends.py  test_bb84_decoy_3intensity.py  test_benchmark_ingestion.py  test_blinding_enhanced.py  test_broadband.py  test_build_pic_c_d5_packet_script.py  test_build_pic_external_data_manifest_script.py  (+237 more)
ui/: app.py  (+3 more)
(+1697 files in other folders)
