[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photonstrust"
version = "0.1.0"
description = "Physics-calibrated quantum link reliability toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
qutip = ["qutip>=4.7"]
ui = ["streamlit>=1.28"]
pdf = ["reportlab>=4.0"]
dev = ["pytest>=7.4", "pytest-cov>=5.0", "jsonschema>=4.19", "cryptography>=42.0"]
qiskit = ["qiskit>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
layout = ["gdstk>=0.9"]
signing = ["cryptography>=42.0"]

[project.scripts]
photonstrust = "photonstrust.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["photonstrust*"]

[tool.coverage.run]
branch = true
source = ["photonstrust"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
