[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photonstrust"
version = "0.1.0"
description = "Physics-calibrated quantum link reliability toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "PhotonTrust Contributors" }
]
keywords = ["quantum", "photonics", "reliability", "simulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
qutip = ["qutip>=4.7"]
ui = ["streamlit>=1.28"]
pdf = ["reportlab>=4.0"]
dev = ["pytest>=7.4", "pytest-cov>=5.0", "jsonschema>=4.19", "cryptography>=42.0"]
qiskit = ["qiskit>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
layout = ["gdstk>=0.9"]
signing = ["cryptography>=42.0"]

[project.scripts]
photonstrust = "photonstrust.cli:main"

[project.urls]
Homepage = "https://github.com/photonstrust/photonstrust"
Repository = "https://github.com/photonstrust/photonstrust"
Issues = "https://github.com/photonstrust/photonstrust/issues"
Documentation = "https://github.com/photonstrust/photonstrust#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["photonstrust*"]

[tool.coverage.run]
branch = true
source = ["photonstrust"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
