[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photonstrust"
version = "0.1.0"
description = "Physics-calibrated quantum link reliability toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "PhotonTrust Contributors" }
]
keywords = ["quantum", "photonics", "reliability", "simulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "pydantic>=2.7"
]

[project.optional-dependencies]
qutip = ["qutip>=4.7"]
ui = ["streamlit>=1.28", "streamlit-agraph>=0.0.45", "streamlit-echarts>=0.4"]
drc = ["rich>=13.0"]
cli = ["rich>=13.0"]
ml = ["scikit-learn>=1.3"]
pdf = ["reportlab>=4.4.10"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=5.0",
  "jsonschema>=4.19",
  "cryptography>=42.0",
  "reportlab>=4.4.10",
  "pre-commit>=3.7",
  "ruff>=0.5",
  "httpx>=0.27",
  "jax>=0.4",
  "eval_type_backport>=0.2; python_version < '3.10'",
]
qiskit = ["qiskit>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
layout = ["gdstk>=0.9"]
signing = ["cryptography>=42.0"]
optuna = ["optuna>=3.6"]
ray = ["ray>=2.10"]
mlflow = ["mlflow>=2.14"]
prefect = ["prefect>=2.18"]
dvc = ["dvc>=3.50"]

[project.scripts]
photonstrust = "photonstrust.cli:main"
photonstrust-drc = "scripts.drc_wizard:main"

[project.urls]
Homepage = "https://github.com/photonstrust/photonstrust"
Repository = "https://github.com/photonstrust/photonstrust"
Issues = "https://github.com/photonstrust/photonstrust/issues"
Documentation = "https://github.com/photonstrust/photonstrust/tree/main/docs"
Changelog = "https://github.com/photonstrust/photonstrust/blob/main/CHANGELOG.md"
Security = "https://github.com/photonstrust/photonstrust/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["photonstrust*", "ui*"]

[tool.coverage.run]
branch = true
source = ["photonstrust"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  ".venv",
  ".venv.production",
  "photonstrust.egg-info",
  "photonstrust_rs",
  "web",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
